--- a/TEQVIM/Inicio/inicio.css
+++ b/TEQVIM/Inicio/inicio.css
@@ -1,31 +1,157 @@
-  *  {
-    margin: 0;
+*{
     padding: 0;
-    box-sizing: boder-box;
+    margin: 0;
+    box-sizing: border-box;
     font-family: sans-serif;
 }
 
-body {
+nav{
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: 0;
+    padding: 0 5%;
+    height: 80px;
+    background-color: rgb(21, 20, 20);
+}
+
+nav .logo{
+    float: left;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 34;
+    color:antiquewhite;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav .list{
+    float: right;
+    padding: 0;
+    margin: 0;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .list li{
+    list-style: none;
+}
+
+nav .list a{
+    display: block;
+    text-transform: lowercase;
+    padding: 18px;
+    font-size: 16px;
+    font-weight: bold;
+    color: antiquewhite;
+    text-decoration: none;
+}
+
+nav .list a:hover{
+    border-bottom: 4px solid #675bf9;
+}
+
+#toggle{
+    position: absolute;
+    top: -100px;
+}
+
+nav .icon-bars{
+    display: none;
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+
+nav .icon-bars .line{
+    width: 30px;
+    height: 5px;
+    background-color: antiquewhite;
+    margin: 5px;
+    border-radius: 3px;
+    transition: all .2s ease-in-out;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
+
+@media (max-widht:768px) {
+    nav .logo{
+        float: none;
+        width: auto;
+        justify-content: center;
+    }
+    nav .list{
+        float: none;
+        position: fixed;
+        z-index: 9;
+        left: 0;
+        right: 0;
+        top: 100px;
+        bottom: 100%;
+        width: auto;
+        height: auto;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background-color: rgb(255, 255, 255);
+        overflow: hidden;
+        transition: all .6s ease-in-out;
+        -webkit-transition: all .6s ease-in-out;
+        -moz-transition: all .6s ease-in-out;
+        -ms-transition: all .6s ease-in-out;
+        -o-transition: all .6s ease-in-out;
+    }
+
+    nav .list a{
+        font-size: 20px;
+    }
+
+    nav :checked ~ .list{
+        bottom: 0;
+    }
+
+    nav .icon-bars{
+        display: block;
+    }
+}
+
+body{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 80vh;
-    background-image: linear-gradient(45deg, #ffd1ff 0, #d5a9ff 25%, #897ce6 50%, #47509b 75%, #132a5b 100%);
+    min-height: 100vh;
+    background: linear-gradient(to right, #ffd1ff 0, #d5a9ff 25%, #897ce6 50%, #47509b 75%, #132a5b 100% );
 }
 
 form{
     display: flex;
     flex-direction: column;
-    background: #fff;
+    background:#ffffff;
     text-align: center;
     padding: 25px 25px;
-    box-shadow: 0 10px 15px #5666e8;
+    box-shadow: 0 10px 15px #675bf9;
 }
 
 form .title{
     color: #252525;
-    font-size:  35px;
-    font-weight: 800;
+    font-size: 35px;
+    font-weight: 800px;
     margin-bottom: 30px;
 }
 
@@ -33,36 +159,33 @@ form label{
     margin-bottom: 35px;
 }
 
-form label .fa-solid{
-    font-size:  20px;
-    color:#806be7;
-    margin-right: 10px;
 
-}
 
-form label input{
+form label  input{
     outline: none;
     border: none;
-    color:#252525;
-    border-bottom: solid 1px #806be7;
-    padding: 0 5px ;
+    color: #0c0c0d;
+    border-bottom: solid 1px;
+    padding: 0 5px;
     font-size: 18px;
 }
 
-form label input::placeholder{
-    color:#cab9f1;
+form label inpuit::placeholder{
+    color: #252525;
 }
 
 form .link{
-    color: #252525;
+    color:#252525;
     margin-bottom: 15px;
 }
 
 form button{
-    color: #fff;
+    color: #000000;
     border: none;
-    background-image: linear-gradient(45deg, #ffd1ff 0, #d5a9ff 25%, #897ce6 50%, #47509b 75%, #132a5b 100%);
-    padding: 10px 15px;
+    background: linear-gradient(to right, #ffd1ff 0, #d5a9ff 25%, #897ce6 50%, #47509b 75%, #132a5b 100% );
+    padding: 15px 15px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
 }
+
